@@ -11,7 +11,7 @@ use Encode 'encode_utf8', 'decode_utf8';
 
 our @EXPORT = qw|
   htmlMainTabs htmlDenied htmlHiddenMessage htmlBrowse htmlBrowseNavigate
-  htmlRevision htmlEditMessage htmlItemMessage htmlVoteStats
+  htmlRevision htmlEditMessage htmlItemMessage htmlVoteStats htmlHistory
 |;
 
 
@@ -439,6 +439,52 @@ sub htmlVoteStats {
    end;
    clearfloat;
   end;
+}
+
+
+sub htmlHistory {
+  my($self, $list, $f, $np, $url) = @_;
+  $self->htmlBrowse(
+    items    => $list,
+    options  => $f,
+    nextpage => $np,
+    pageurl  => $url,
+    class    => 'history',
+    header   => [
+      sub { td colspan => 2, class => 'tc1', 'Rev.' },
+      [ 'Date' ],
+      [ 'User' ],
+      [ 'Page' ],
+    ],
+    row      => sub {
+      my($s, $n, $i) = @_;
+      my $tc = [qw|v r p|]->[$i->{type}];
+      my $revurl = "/$tc$i->{iid}.$i->{rev}";
+
+      Tr $n % 2 ? ( class => 'odd' ) : ();
+       td class => 'tc1_1';
+        a href => $revurl, "$tc$i->{iid}";
+       end;
+       td class => 'tc1_2';
+        a href => $revurl, ".$i->{rev}";
+       end;
+       td date $i->{added};
+       td;
+        lit userstr($i);
+       end;
+       td;
+        a href => $revurl, title => $i->{ioriginal}, shorten $i->{ititle}, 80;
+       end;
+      end;
+      if($i->{comments}) {
+        Tr $n % 2 ? ( class => 'odd' ) : ();
+         td colspan => 5, class => 'editsum';
+          lit bb2html $i->{comments}, 150;
+         end;
+        end;
+      }
+    },
+  );
 }
 
 
