@@ -36,6 +36,7 @@ TODO:
 	  - Improved VN relation editor interface
 	  - Voted/non-voted filter to user's VNLists
 	  - VNList status can only be changed from release pages
+	  - More stats + recent changes on user pages
 
 1.23 - 2008-10-22 (r117)
 	- Removed redirects for old revision URLs (the code wasn't very secure...)
